@startuml

title __TOOLS's Class Diagram__\n

  namespace com.example.edelhome {
    namespace ui.tools {
      class com.example.edelhome.ui.tools.ToolsFragment {
          - Auth : FirebaseAuth
          - btnAb : Button
          - btnAn : Button
          + onCreateView()
      }
    }
  }
  

  namespace com.example.edelhome {
    namespace ui.tools {
      class com.example.edelhome.ui.tools.ToolsViewModel {
          - mText : MutableLiveData<String>
          + ToolsViewModel()
          + getText()
      }
    }
  }
  

  com.example.edelhome.ui.tools.ToolsFragment -up-|> androidx.fragment.app.Fragment
  com.example.edelhome.ui.tools.ToolsFragment o-- com.example.edelhome.MainActivity : main
  com.example.edelhome.ui.tools.ToolsFragment o-- com.example.edelhome.ui.home.HomeFragment : mainFragment
  com.example.edelhome.ui.tools.ToolsFragment o-- com.example.edelhome.ui.tools.ToolsViewModel : toolsViewModel
  com.example.edelhome.ui.tools.ToolsViewModel -up-|> androidx.lifecycle.ViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
